# FLAME-autotools-test

./: Makefile.am  buildrc-futile  buildrc-futile-mkl  configure.ac
m4/: package.m4
modules/: Makefile.am  minhopp_mod.F90  potential_mod.F90  saddle_mod.F90
src/: Makefile.am
